--- a/build-caching-maven-samples/clojure-project/pom.xml
+++ b/build-caching-maven-samples/clojure-project/pom.xml
@@ -59,7 +59,7 @@
           <groupId>com.gradle</groupId>
           <artifactId>gradle-enterprise-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise xmlns="https://www.gradle.com/develocity-maven-project">
+            <gradleEnterprise>
               <plugins>
                 <plugin>
                   <groupId>com.theoryinpractise</groupId>
