--- a/build-caching-maven-samples/kotlin-project/pom.xml
+++ b/build-caching-maven-samples/kotlin-project/pom.xml
@@ -68,7 +68,7 @@
                     <groupId>com.gradle</groupId>
                     <artifactId>gradle-enterprise-maven-extension</artifactId>
                     <configuration>
-                        <gradleEnterprise xmlns="https://www.gradle.com/develocity-maven-project">
+                        <gradleEnterprise>
                             <plugins>
                                 <plugin>
                                     <groupId>org.jetbrains.kotlin</groupId>
