--- a/build-caching-maven-samples/webstart-project/pom.xml
+++ b/build-caching-maven-samples/webstart-project/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd https://www.gradle.com/develocity-maven-project https://www.gradle.com/schema/gradle-enterprise-maven-project.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd https://www.gradle.com/schema/gradle-enterprise-maven-project.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>webstart-project</artifactId>
   <packaging>jar</packaging>
