--- a/build-caching-maven-samples/aspectj-project/pom.xml
+++ b/build-caching-maven-samples/aspectj-project/pom.xml
@@ -54,7 +54,7 @@
                     <groupId>com.gradle</groupId>
                     <artifactId>gradle-enterprise-maven-extension</artifactId>
                     <configuration>
-                        <gradleEnterprise">
+                        <gradleEnterprise>
                             <plugins>
                                 <plugin>
                                     <groupId>org.codehaus.mojo</groupId>
