Add spotbugs noClassOk input property added in spotless-maven-plugin 4.8.3.0

--- a/build-caching-maven-samples/spotbugs-project/pom.xml
+++ b/build-caching-maven-samples/spotbugs-project/pom.xml
@@ -80,6 +80,7 @@
                           <property><name>failOnError</name></property>
                           <property><name>skipEmptyReport</name></property>
                           <property><name>userPrefs</name></property>
+                          <property><name>noClassOk</name></property>
 
                           <property><name>sarifOutput</name></property>
                           <property><name>sarifFullPath</name></property>
