Define new properties added in spotless-maven-plugin 2.43.0

--- a/build-caching-maven-samples/spotless-project/pom.xml
+++ b/build-caching-maven-samples/spotless-project/pom.xml
@@ -179,6 +179,12 @@
                                         <property>
                                             <name>gherkin</name>
                                         </property>
+                                        <property>
+                                            <name>go</name>
+                                        </property>
+                                        <property>
+                                            <name>shell</name>
+                                        </property>
                                     </nestedProperties>
                                     <outputs>
                                         <directories>
