--- a/build-caching-maven-samples/spotless-project/pom.xml
+++ b/build-caching-maven-samples/spotless-project/pom.xml
@@ -100,6 +100,30 @@
                                             <ignore>lineEndings</ignore>
                                         </ignoredProperties>
                                     </inputs>
+                                    <iteratedProperties>
+                                        <property>
+                                            <name>formats</name>
+                                            <inputs>
+                                                <properties>
+                                                    <property>
+                                                        <name>encoding</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>lineEndings</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>ratchetFrom</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>includes</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>excludes</name>
+                                                    </property>
+                                                </properties>
+                                            </inputs>
+                                        </property>
+                                    </iteratedProperties>
                                     <nestedProperties>
                                         <property>
                                             <name>licenseHeader</name>
