Update to use DV Maven extension 1.21 and DV API

--- a/build-caching-maven-samples/antlr3-project/pom.xml
+++ b/build-caching-maven-samples/antlr3-project/pom.xml
@@ -59,9 +59,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>org.antlr</groupId>
@@ -117,7 +117,7 @@
                   </outputs>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
