--- a/build-caching-maven-samples/asciidoctor-project/pom.xml
+++ b/build-caching-maven-samples/asciidoctor-project/pom.xml
@@ -58,9 +58,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>org.asciidoctor</groupId>
@@ -174,7 +174,7 @@
                   </outputs>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
