--- a/build-caching-maven-samples/clojure-project/pom.xml
+++ b/build-caching-maven-samples/clojure-project/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd
-  https://www.gradle.com/schema/gradle-enterprise-maven-project.xsd">
+  https://www.gradle.com/schema/develocity-maven-project.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>clojure-project</artifactId>
   <packaging>jar</packaging>
@@ -57,9 +57,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>com.theoryinpractise</groupId>
@@ -212,7 +212,7 @@
                   </outputs>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
