--- a/build-caching-maven-samples/duplicate-finder-project/pom.xml
+++ b/build-caching-maven-samples/duplicate-finder-project/pom.xml
@@ -42,9 +42,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>org.basepom.maven</groupId>
@@ -115,7 +115,7 @@
                   </outputs>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
