--- a/build-caching-maven-samples/exec-yarn-project/pom.xml
+++ b/build-caching-maven-samples/exec-yarn-project/pom.xml
@@ -52,9 +52,9 @@
         <!-- Make yarn build cacheable -->
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>org.codehaus.mojo</groupId>
@@ -174,7 +174,7 @@
                   </executions>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
