--- a/build-caching-maven-samples/protobuf-project/pom.xml
+++ b/build-caching-maven-samples/protobuf-project/pom.xml
@@ -65,9 +65,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>com.github.os72</groupId>
@@ -126,7 +126,7 @@
                   </outputs>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
