--- a/build-caching-maven-samples/webstart-project/pom.xml
+++ b/build-caching-maven-samples/webstart-project/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd https://www.gradle.com/schema/gradle-enterprise-maven-project.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd https://www.gradle.com/schema/develocity-maven-project.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>webstart-project</artifactId>
   <packaging>jar</packaging>
@@ -73,9 +73,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>org.codehaus.mojo</groupId>
@@ -423,7 +423,7 @@
                   </outputs>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
