--- a/.github/workflows/maven-data-capturing-samples-verification.yml
+++ b/.github/workflows/maven-data-capturing-samples-verification.yml
@@ -42,16 +42,16 @@ jobs:
       - name: Provide data capture script to Maven build
         run: |
             # copy over sample script such that it gets pulled in by the Develocity extension
-            cp build-data-capturing-maven-samples/${{ matrix.sample-file }} common-develocity-maven-configuration/.mvn/gradle-enterprise-custom-user-data.groovy
+            cp build-data-capturing-maven-samples/${{ matrix.sample-file }} common-develocity-maven-configuration/.mvn/develocity-custom-user-data.groovy
       - name: Run Maven build
         id: mvn-build
         run: |
           delimiter="$(openssl rand -hex 8)"
           echo "mavenOutput<<${delimiter}" >> $GITHUB_OUTPUT
-          echo "$(mvn -f common-develocity-maven-configuration/pom.xml -Dgradle.enterprise.url=https://ge.solutions-team.gradle.com -X -B clean validate)" >> $GITHUB_OUTPUT
+          echo "$(mvn -f common-develocity-maven-configuration/pom.xml -Ddevelocity.url=https://ge.solutions-team.gradle.com -X -B clean validate)" >> $GITHUB_OUTPUT
           echo "${delimiter}" >> $GITHUB_OUTPUT
         env:
-          GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
+          DEVELOCITY_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
       - name: Validate extension loaded
         # Asserting that extension was loaded checking a log entry
         run: exit 1
