--- a/build-caching-maven-samples/animal-sniffer-project/pom.xml
+++ b/build-caching-maven-samples/animal-sniffer-project/pom.xml
@@ -39,9 +39,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>org.codehaus.mojo</groupId>
@@ -116,7 +116,7 @@
                   </executions>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
