--- a/build-caching-maven-samples/enforcer-project/pom.xml
+++ b/build-caching-maven-samples/enforcer-project/pom.xml
@@ -94,9 +94,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
@@ -224,7 +224,7 @@
                   </executions>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
