--- a/build-caching-maven-samples/spring-cloud-contract-project/pom.xml
+++ b/build-caching-maven-samples/spring-cloud-contract-project/pom.xml
@@ -62,9 +62,9 @@
       <plugins>
         <plugin>
           <groupId>com.gradle</groupId>
-          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <artifactId>develocity-maven-extension</artifactId>
           <configuration>
-            <gradleEnterprise>
+            <develocity>
               <plugins>
                 <plugin>
                   <groupId>org.springframework.cloud</groupId>
@@ -206,7 +206,7 @@
                   </executions>
                 </plugin>
               </plugins>
-            </gradleEnterprise>
+            </develocity>
           </configuration>
         </plugin>
       </plugins>
