--- a/common-develocity-maven-configuration/.gitignore
+++ b/common-develocity-maven-configuration/.gitignore
@@ -1,5 +1,5 @@
 # Ignore Gradle project-specific cache directory
-.mvn/.gradle-enterprise
+.mvn/.develocity
 
 # Ignore Maven build output directory
 target
