Adjust extension loaded and failed messages

--- a/.github/workflows/maven-data-capturing-samples-verification.yml
+++ b/.github/workflows/maven-data-capturing-samples-verification.yml
@@ -12,8 +12,8 @@ jobs:
     name: Verification of ${{ matrix.name }}
     runs-on: ubuntu-latest
     env:
-      LOG_MSG_EXTENSION_LOADED: "Build operation 'Gradle Enterprise mojo execution' completed"
-      LOG_MSG_EXECUTION_FAILED: "Error executing a GradleEnterpriseListener callback"
+      LOG_MSG_EXTENSION_LOADED: "Build operation 'Develocity mojo execution' completed"
+      LOG_MSG_EXECUTION_FAILED: "Error executing a DevelocityListener callback"
     strategy:
       matrix:
         include:
