--- a/.github/workflows/maven-build-caching-samples-verification.yml
+++ b/.github/workflows/maven-build-caching-samples-verification.yml
@@ -38,7 +38,7 @@ jobs:
             -g "verify" \
             -a "-Dorg.slf4j.simpleLogger.log.gradle.goal.cache=debug -B" \
             -s "https://ge.solutions-team.gradle.com" \
-            -f 2>&1 | tee -a /tmp/build.log
+            -f -e 2>&1 | tee -a /tmp/build.log
           echo "hasUnknownParams=$(grep "Build caching was not enabled for this goal execution because the following parameters were not handled" /tmp/build.log | wc -l)" >> $GITHUB_OUTPUT
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
