--- a/.github/workflows/convention-develocity-maven-extension-verification.yml
+++ b/.github/workflows/convention-develocity-maven-extension-verification.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        maven-version: ['3.6.3', '3.8.8', '3.9.1']
+        maven-version: ['3.9.4']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -51,7 +51,7 @@ jobs:
           name: convention-develocity-maven-extension
           path: ~/.m2/repository/com/myorg
       - name: Verify example build
-        working-directory: convention-develocity-maven-extension/example
+        working-directory: convention-develocity-maven-extension/examples/maven_${{ matrix.maven-version }}
         run: ./mvnw clean verify -Ddevelocity.url=https://ge.solutions-team.gradle.com
         env:
           DEVELOCITY_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
