--- a/.github/workflows/convention-develocity-gradle-plugin-verification.yml
+++ b/.github/workflows/convention-develocity-gradle-plugin-verification.yml
@@ -34,13 +34,25 @@ jobs:
           path: ~/.m2/repository/com/myorg
 
   verification:
-    name: Verify Example Build for Gradle ${{ format(matrix.gradle-version, ' ') }}
+    name: Verify Example Build for Gradle ${{ matrix.versions.version }}
     needs: [build]
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        gradle-version: ['5', '6{0}and{0}later'] # Gradle 4 and earlier examples are not tested as they would not succeed
+        # Gradle 3 and earlier is not tested because it does not apply CCUD and overriding the server URL is not possible.
+        # Gradle 4 is not tested because it does not support publishing to authenticated servers.
+        versions:
+          - sample: '5'
+            version: '5.0'
+          - sample: '6_and_later'
+            version: '6.0.1'
+          - sample: '6_and_later'
+            version: '7.0.2'
+          - sample: '6_and_later'
+            version: '8.0.2'
+          - sample: '6_and_later'
+            version: '(Current)'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -56,9 +68,15 @@ jobs:
         with:
           name: convention-develocity-gradle-plugin
           path: ~/.m2/repository/com/myorg
+      - name: Set Gradle version
+        if: ${{ matrix.versions.version != '(Current)' }}
+        working-directory: convention-develocity-gradle-plugin/examples/gradle_${{ matrix.versions.sample }}
+        run: ./gradlew wrapper --gradle-version=${{ matrix.versions.version }}
+        env:
+          DEVELOCITY_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
       - name: Verify example build
         id: build
-        working-directory: convention-develocity-gradle-plugin/examples/gradle_${{ format(matrix.gradle-version, '_') }}
+        working-directory: convention-develocity-gradle-plugin/examples/gradle_${{ matrix.versions.sample }}
         run: ./gradlew build -Ddevelocity.url=https://ge.solutions-team.gradle.com
         env:
           DEVELOCITY_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
