Exclude MANIFEST.MF from shaded jar

--- a/convention-develocity-maven-extension/extension/pom.xml
+++ b/convention-develocity-maven-extension/extension/pom.xml
@@ -89,6 +89,20 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <filters>
+                        <filter>
+                            <artifact>com.gradle:common-custom-user-data-maven-extension</artifact>
+                            <excludes>
+                                <exclude>META-INF/MANIFEST.MF</exclude>
+                            </excludes>
+                        </filter>
+                        <filter>
+                            <artifact>com.gradle:develocity-maven-extension</artifact>
+                            <excludes>
+                                <exclude>META-INF/MANIFEST.MF</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer"/>
                     </transformers>
