--- a/.github/workflows/quarkus-build-caching-extension.yml
+++ b/.github/workflows/quarkus-build-caching-extension.yml
@@ -1,6 +1,9 @@
 name: Verify Quarkus Build Caching Extension
 
 on:
+  schedule:
+    # Every Sunday at 9.00am - scheduled to test against latest Quarkus version
+    - cron: "0 9 * * 0"
   push:
     branches: [ main ]
   pull_request:
@@ -22,6 +25,6 @@ jobs:
       - name: Build with Maven
         working-directory: quarkus-build-caching-extension
         run: |
-          ./mvnw --batch-mode clean package
+          ./mvnw --batch-mode clean package integration-test
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
