--- a/.github/workflows/quarkus-build-caching-extension.yml
+++ b/.github/workflows/quarkus-build-caching-extension.yml
@@ -24,19 +24,13 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Update latest Quarkus version for testing
-        working-directory: quarkus-build-caching-extension
-        run: |
-          LATEST_QUARKUS_VERSION=`curl -s https://search.maven.org/solrsearch/select\?q\=g:"io.quarkus"+AND+a:"quarkus-bom" | jq -r '.response.docs[0].latestVersion'`
-          echo "Latest Quarkus version: $LATEST_QUARKUS_VERSION"
-          sed -i "s/999-SNAPSHOT/$LATEST_QUARKUS_VERSION/g" src/it/quarkus-latest/pom.xml
       - name: Build with Maven
         working-directory: quarkus-build-caching-extension
         run: |
           ./mvnw --batch-mode clean package integration-test
         env:
           DEVELOCITY_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
-      - name: Post Failure Upload Test Reports to Artifacts
+      - name: Upload Test Reports to Artifacts (on failure only)
         if: ${{ failure() }}
         uses: actions/upload-artifact@v4
         with:
