--- a/.github/workflows/quarkus-build-caching-extension.yml
+++ b/.github/workflows/quarkus-build-caching-extension.yml
@@ -1,10 +1,15 @@
 name: Verify Quarkus Build Caching Extension
 
 on:
+  schedule:
+    # Every Sunday at 9.00am - scheduled to test against latest Quarkus version
+    - cron: "0 9 * * 0"
   push:
     branches: [ main ]
+    paths: [ 'quarkus-build-caching-extension/**' ]
   pull_request:
     branches: [ main ]
+    paths: [ 'quarkus-build-caching-extension/**' ]
   workflow_dispatch:
 
 jobs:
@@ -22,6 +27,13 @@ jobs:
       - name: Build with Maven
         working-directory: quarkus-build-caching-extension
         run: |
-          ./mvnw --batch-mode clean package
+          ./mvnw --batch-mode clean package integration-test
         env:
-          GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
+          DEVELOCITY_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
+      - name: Upload integration tests reports (on failure only)
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: Integration tests logs
+          path: |
+            quarkus-build-caching-extension/target/it/**/*.log
