--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v3
         with:
-          develocity-access-key: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
+          develocity-access-key: ${{ secrets.DV_SOLUTIONS_ACCESS_KEY }}
       - name: Inject data capture script into Gradle build using Groovy DSL
         working-directory: common-develocity-gradle-configuration-groovy
         run: |
