--- a/.github/workflows/convention-develocity-gradle-plugin-verification.yml
+++ b/.github/workflows/convention-develocity-gradle-plugin-verification.yml
@@ -72,8 +72,8 @@ jobs:
         if: ${{ matrix.versions.version != '(Current)' }}
         working-directory: convention-develocity-gradle-plugin/examples/gradle_${{ matrix.versions.sample }}
         run: |
-          ./gradlew wrapper --gradle-version=${{ matrix.versions.version }}
-          ./gradlew wrapper --gradle-version=${{ matrix.versions.version }}
+          ./gradlew wrapper --gradle-version=${{ matrix.versions.version }} --no-scan
+          ./gradlew wrapper --gradle-version=${{ matrix.versions.version }} --no-scan
         env:
           DEVELOCITY_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
       - name: Verify example build
