--- a/convention-develocity-gradle-plugin/plugins/gradle-5-or-newer/build.gradle
+++ b/convention-develocity-gradle-plugin/plugins/gradle-5-or-newer/build.gradle
@@ -24,7 +24,7 @@ java {
 
 gradlePlugin {
     plugins {
-        gradleEnterpriseConventions {
+        develocityConventions {
             // CHANGE ME: change for your organization
             id = 'com.myorg.convention-develocity-gradle-5-or-newer'
             displayName = 'Develocity Convention Plugin for Gradle 5.0 and higher'
