--- a/convention-develocity-gradle-plugin/examples/gradle_6.9_and_later/settings.gradle
+++ b/convention-develocity-gradle-plugin/examples/gradle_6.9_and_later/settings.gradle
@@ -6,7 +6,7 @@ pluginManagement {
 }
 
 plugins {
-    id 'com.myorg.convention-develocity-gradle-5-or-newer' version '(,2.0.0)'
+    id 'com.myorg.convention-develocity-gradle-5-or-newer' version '1.+'
 }
 
 rootProject.name = 'example-build'
