Add path filters to workflows
This prevents 30 workflows from running for every change.

--- a/.github/workflows/convention-develocity-gradle-plugin-verification.yml
+++ b/.github/workflows/convention-develocity-gradle-plugin-verification.yml
@@ -3,8 +3,10 @@ name: Verify Convention Develocity Gradle Plugin
 on:
   push:
     branches: [ main ]
+    paths: [ 'convention-develocity-gradle-plugin/**' ]
   pull_request:
     branches: [ main ]
+    paths: [ 'convention-develocity-gradle-plugin/**' ]
   workflow_dispatch:
 
 jobs:
