--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -3,8 +3,10 @@ name: Verify Gradle Data Capturing Samples
 on:
   push:
     branches: [ main ]
+    paths: [ 'build-data-capturing-gradle-samples/**' ]
   pull_request:
     branches: [ main ]
+    paths: [ 'build-data-capturing-gradle-samples/**' ]
   workflow_dispatch:
 
 jobs:
