--- a/convention-develocity-gradle-plugin/examples/gradle_5/build.gradle
+++ b/convention-develocity-gradle-plugin/examples/gradle_5/build.gradle
@@ -1,4 +1,4 @@
 plugins {
-    id 'com.myorg.convention-develocity-gradle-5-or-newer' version '1.0-SNAPSHOT'
+    id 'com.myorg.convention-develocity-gradle-5-or-newer' version '1.0'
     id 'java'
 }
