--- a/.github/workflows/quarkus-build-caching-extension.yml
+++ b/.github/workflows/quarkus-build-caching-extension.yml
@@ -6,10 +6,10 @@ on:
     - cron: "0 9 * * 0"
   push:
     branches: [ main ]
-    paths: [ 'quarkus-build-caching-extension/**' ]
+    paths: [ 'quarkus-build-caching-extension/**', '.github/workflows/**' ]
   pull_request:
     branches: [ main ]
-    paths: [ 'quarkus-build-caching-extension/**' ]
+    paths: [ 'quarkus-build-caching-extension/**', '.github/workflows/**' ]
   workflow_dispatch:
 
 jobs:
