Added testing kts scripts for gradle data capturing samples

--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -18,22 +18,44 @@ jobs:
         include:
           - name: 'Develocity Gradle plugin version'
             sample-file: 'capture-develocity-plugin-version/gradle-develocity-plugin-version.gradle'
+          - name: 'Develocity Gradle plugin version (Kotlin DSL)'
+            sample-file: 'capture-develocity-plugin-version/gradle-develocity-plugin-version.gradle.kts'
           - name: 'Git diffs'
             sample-file: 'capture-git-diffs/gradle-git-diffs.gradle'
+          - name: 'Git diffs (Kotlin DSL)'
+            sample-file: 'capture-git-diffs/gradle-git-diffs.gradle.kts'
+          - name: 'Max parallel forks'
+            sample-file: 'capture-max-parallel-forks/gradle-max-parallel-forks.gradle'
+          - name: 'Max parallel forks (Kotlin DSL)'
+            sample-file: 'capture-max-parallel-forks/gradle-max-parallel-forks.gradle.kts'
           - name: 'OS processes'
             sample-file: 'capture-os-processes/gradle-os-processes.gradle'
+          - name: 'OS processes (Kotlin DSL)'
+            sample-file: 'capture-os-processes/gradle-os-processes.gradle.kts'
           - name: 'Processor arch'
             sample-file: 'capture-processor-arch/gradle-processor-arch.gradle'
+          - name: 'Processor arch (Kotlin DSL)'
+            sample-file: 'capture-processor-arch/gradle-processor-arch.gradle.kts'
           - name: 'Quality checks'
             sample-file: 'capture-quality-check-issues/gradle-quality-check-issues.gradle'
+          - name: 'Quality checks (Kotlin DSL)'
+            sample-file: 'capture-quality-check-issues/gradle-quality-check-issues.gradle.kts'
           - name: 'Slow tasks'
             sample-file: 'capture-slow-workunit-executions/gradle-slow-task-executions.gradle'
+          - name: 'Slow tasks (Kotlin DSL)'
+            sample-file: 'capture-slow-workunit-executions/gradle-slow-task-executions.gradle.kts'
           - name: 'Test task system properties'
             sample-file: 'capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle'
+          - name: 'Test task system properties (Kotlin DSL)'
+            sample-file: 'capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle.kts'
           - name: 'Test PTS support'
             sample-file: 'capture-test-pts-support/gradle-test-pts-support.gradle'
+          - name: 'Test PTS support (Kotlin DSL)'
+            sample-file: 'capture-test-pts-support/gradle-test-pts-support.gradle.kts'
           - name: 'Thermal throttling'
             sample-file: 'capture-thermal-throttling/gradle-thermal-throttling.gradle'
+          - name: 'Thermal throttling (Kotlin DSL)'
+            sample-file: 'capture-thermal-throttling/gradle-thermal-throttling.gradle.kts'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
